--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,14 @@
 /.github export-ignore
 CHANGELOG.md export-ignore
 .styleci.yml export-ignore
+
+
+# Forcer la détection de PHP comme langage principal
+*.php linguist-language=PHP
+
+# Ignorer les fichiers HTML, CSS et JavaScript
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+*.js linguist-detectable=false
+*.json linguist-detectable=false
+*.vue linguist-detectable=false
