--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,20 @@
+* text=auto eol=lf
 
+*.blade.php diff=html
+*.css diff=css
+*.html diff=html
+*.md diff=markdown
+*.php diff=php
+
+/.github export-ignore
+CHANGELOG.md export-ignore
+.styleci.yml export-ignore
 
 
 # Forcer la détection de PHP comme langage principal
 *.php linguist-language=PHP
 
-# Ignorer uniquement les fichiers JavaScript
+# Ignorer uniquement les fichiers JavaScript et CSS
 *.js linguist-detectable=false
+*.css linguist-detectable=false
+
